# recipe-saver

./: .gitignore  CLAUDE.md  PLAN.md  README.md
.claude/: settings.json
.claude/hooks/: block-push-to-main.sh  pre-pr-check.sh
.github/workflows/: build-apk.yml  ci.yml  test.yml
backend/: .env.example  pyproject.toml  requirements.txt  setup.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/extraction/: __init__.py  instagram.py  llm_extractor.py  pipeline.py  recipe_search.py  recipe_sites.py  url_utils.py  youtube.py
backend/app/models/: __init__.py  database.py  recipe.py
backend/app/services/: __init__.py  recipe_service.py
backend/tests/: conftest.py  test_api.py  test_e2e_instagram.py  test_e2e_youtube.py  test_llm_extractor.py  test_recipe_search.py  test_recipe_sites.py  test_youtube.py
mobile/: README.md  pubspec.yaml
mobile/android/: build.gradle  settings.gradle
mobile/android/app/: build.gradle  build.gradle.kts  google-services.json
mobile/lib/: main.dart
mobile/lib/constants/: categories.dart
mobile/lib/models/: recipe.dart
mobile/lib/providers/: providers.dart
mobile/lib/screens/: add_recipe_screen.dart  backup_screen.dart  edit_recipe_screen.dart  home_screen.dart  recipe_detail_screen.dart  search_screen.dart
mobile/lib/services/: api_service.dart  backup_service.dart  extraction_service.dart  local_db_service.dart  share_intent_service.dart
mobile/lib/widgets/: recipe_card.dart
mobile/test/: widget_test.dart
mobile/test/e2e/: extraction_e2e_test.dart  (+1 more)
(+12 files in other folders)
